# SD

./: .gitignore  README.md  pyproject.toml
docs/: my_project.html  search.js
docs/my_project/: app.html  config.html  dataset.html  model.html  plots.html  train.html  train_exp1.html
models/lightning_logs/version_0/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_1/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_2/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_3/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_4/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_5/checkpoints/: epoch=2-step=2814.ckpt
models/lightning_logs/version_6/checkpoints/: epoch=2-step=2814.ckpt
my_project/: EDA.ipynb  app.py  dataset.py  model.py  plots.py  train.py
src/my_project/: EDA.ipynb
